
Controller 2.1.0
================

- Added DSC-IT 100 Security System integration (IP to serial)
